# LOO_CPP_AP3_4

./: CMakeLists.txt  null
include/: Arbitrary.hpp  Noise.hpp  Rectangle.hpp  Signal.hpp  Sinus.hpp  Triangle.hpp
src/: Arbitrary.cpp  Noise.cpp  Rectangle.cpp  Signal.cpp  Sinus.cpp  Triangle.cpp  signal_main_test.cpp
